tests/models/struct/named/string/fail/le.rs
use dade::model;
#[model]
struct TestModel {
    #[field(le = 2)]
    value: String,
}
fn main() {}
