tests/models/struct/named/string/fail/le.stderr
error: Support condition is min_length, max_length, alias, default and validate
 --> tests/models/struct/named/string/fail/le.rs:5:5
  |
5 |     value: String,
  |     ^^^^^
